--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,11 @@
 
                 <data
                     android:host="@string/intent_host"
-                    android:scheme=  "@string/intent_scheme" />
+                    android:scheme="@string/intent_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".TimelineActivity"></activity>
+        <activity android:name=".TimelineActivity" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
